--- a/table.html
+++ b/table.html
@@ -10,7 +10,7 @@
                       <th>Rank</th>
                       <th>Name</th>
                       <th>Year</th>
-                      <th>Total Earnings</th>
+                      <th>Total Box Earnings</th>
                    </tr>
                    
                    <tr>
